--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
         <div id="app-header">
             <header class="header">
                 <div class="flex">
-                    <span class="header-title">
+                    <span class="header-title"> 
                         <img src="img\logo.png" alt="" class="header-logo">
                         HackerNews
                     </span>
-                    <a href="/" class="header-link" data-navigo>Top</a>
-                    <a href="/new" class="header-link" data-navigo>New</a>
-                    <a href="/ask" class="header-link" data-navigo>Ask</a>
-                    <a href="/show" class="header-link" data-navigo>Show</a>
-                    <a href="/favourites" class="header-link" data-navigo>Favourites</a>
+                    <a href="#/" class="header-link">Top</a>
+                    <a href="#/new" class="header-link">New</a>
+                    <a href="#/ask" class="header-link">Ask</a>
+                    <a href="#/show" class="header-link">Show</a>
+                    <a href="#/favorites" class="header-link">Favorites</a>
                 </div>
             </header>
         </div>
